# Fischio

./: .env.example  .gitignore  API.md  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RECON.md  SECURITY.md  index.js  package-lock.json  package.json  vercel.json
api/: [...path].mjs  _not_deployed.mjs
app/: DESIGN.md  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
bot/: arena.mjs  backtest.mjs  copy-agent.mjs  inplay-mm.mjs  keeper.mjs  live-relay.mjs  market-factory.mjs  odds-keeper.mjs  prove-odds.mjs  retire-legacy-markets.mjs  settle-bot.mjs  settle-market.mjs  steam-agent.mjs  tournament.mjs  verify-coverage.mjs
cli/: fischio.mjs
day1/: 00-cert-check.mjs  00-helius-test.mjs  00-rpc-test.mjs  01-setup.mjs  02-subscribe-activate.mjs  02b-activate-only.mjs  02c-activate-loop.mjs  03-pricing.mjs  04-probe-api.mjs  05-onchain-activity.mjs  06-roots-and-cu.mjs  07-root-freshness.mjs  08-activate-probe.mjs  09-cu-scan.mjs  09b-cu-scan-devnet.mjs  10-fixtures.mjs  11-proof-and-cu.mjs  12-tamper-test.mjs  13-ix-size.mjs  14-final-signal.mjs  15-full-history.mjs  16-final-proofs.mjs  17-period-zero-check.mjs  18-period-tamper.mjs  19-topup.mjs  20-fetch-test-proofs.mjs  20-pens-hunt.mjs  21-dump-accounts.mjs  21-dump-oracle.mjs  30-pens-scan.mjs  31-pens-proofs.mjs  40-v2-probe.mjs  41-game-finalised.mjs  cu-scan-results.json  extract-code.mjs  finished-snapshot.json  html-to-text.mjs  onchain-validation-code.txt  openapi.yaml  proof-finished.json  (+5 more)
deploy/: README-wispbyte.md  RUNBOOK.md  seed-loop.mjs  start-all.mjs
docs/: SUBMISSION.md  TXLINE-FEEDBACK.md
lib/: amm.mjs  env.mjs  fixture-proof.mjs  fixtures.mjs  gateway.mjs  guard.mjs  market-id.mjs  market-link.mjs  markets.mjs  movers.mjs  odds-proof.mjs  proof-marshal.mjs  scores.mjs  scoring.mjs  settleable.mjs  staleness.mjs  stat-proof-v3.mjs  strategies.mjs  supervision.mjs  tournament.mjs  txline.mjs  wc-simulator.mjs
programs/exchange/: Cargo.toml
programs/exchange/src/: lib.rs  matching.rs  state.rs
programs/market/: Cargo.toml
programs/market/src/: lib.rs  math.rs  state.rs  txoracle.rs
programs/multi/: Cargo.toml
programs/multi/src/: lib.rs  negrisk.rs  state.rs  txoracle.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/wc-settle/: Cargo.toml
programs/wc-settle/src/: lib.rs  state.rs  txoracle.rs
scripts/: create-devnet-usdc.mjs  create-wager.mjs  faucet-devnet-usdc.mjs  gasless-onboarding-smoke.mjs  pack-keeper.mjs  refresh-fixtures.mjs  seed-exchange-devnet.mjs  seed-final-totals.mjs  seed-market-devnet.mjs  seed-prop-markets.mjs  seed-worldcup-markets.mjs  setup-demo-wager.mjs  start-exchange-validator.ps1  (+7 more)
(+107 files in other folders)
