[package]
name = "fischio-market"
version = "0.1.0"
description = "Proof-settled prediction market (FPMM with conditional tokens) for TxLINE World Cup outcomes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fischio_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
