[package]
name = "fischio-multi"
version = "0.1.0"
description = "Multi-outcome (NegRisk) prediction market with capital-efficient convert and proof settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fischio_multi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
